# KOA_Middleware

./: .buildinfo  .gitignore  Makefile  README.md  authentication.html  calibration_database.html  database.html  file_utils.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  quickstart.ipynb  search.html  searchindex.js  selector_base.py  selectors.html  store.html  store.py
.github/workflows/: build-test.yml  documentation.yml
_modules/: index.html
_modules/koa_middleware/: datamodel_protocol.html  download.html  file_utils.html  keck_client.html  selector_base.html  store.html  utils.html
_modules/koa_middleware/database/: local_database.html  metadata_database.html  orm_base.html  remote_database.html
_sources/: authentication.rst.txt  calibration_database.rst.txt  database.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  selectors.rst.txt  store.rst.txt
_sources/api/: api.rst.txt
api/: api.html
database/: __init__.py  local_database.py  metadata_database.py  orm_base.py  remote_database.py
docs/: Makefile
docs/source/: calibration_database.rst  conf.py  database.rst  index.rst  installation.rst  quickstart.ipynb  quickstart.rst  selectors.rst
koa_middleware/: __init__.py  datamodel.py  datamodel_protocol.py  download.py  file_utils.py  keck_client.py  logging_utils.py  selector_base.py  store.py  utils.py
koa_middleware/database/: __init__.py  local_database.py  metadata_database.py  orm_base.py  remote_database.py
tests/: calibration_orm_model.py  conftest.py  test_koa_id.py  test_koa_middleware_integration.py  test_koa_middlewre_integration.py  test_local_db.py  test_package.py  test_selectors.py  test_store.py
